--- a/2022-2023/Machine Learning/references.bib
+++ b/2022-2023/Machine Learning/references.bib
@@ -106,3 +106,61 @@
   year={2006},
   organization={Mountain View, CA}
 }
+
+@book{europeanparliament.directorategeneralforparliamentaryresearchservices.EthicsArtificialIntelligence2020,
+  title = {The Ethics of Artificial Intelligence: Issues and Initiatives.},
+  shorttitle = {The Ethics of Artificial Intelligence},
+  author = {{European Parliament. Directorate General for Parliamentary Research Services.}},
+  year = {2020},
+  publisher = {{Publications Office}},
+  address = {{LU}},
+  langid = {english},
+  file = {/home/jaymorgan/Zotero/storage/A4WSP5MR/European Parliament. Directorate General for Parliamentary Research Services. - 2020 - The ethics of artificial intelligence issues and .pdf}
+}
+
+@article{bolukbasi2016man,
+  title={Man is to computer programmer as woman is to homemaker? debiasing word embeddings},
+  author={Bolukbasi, Tolga and Chang, Kai-Wei and Zou, James Y and Saligrama, Venkatesh and Kalai, Adam T},
+  journal={Advances in neural information processing systems},
+  volume={29},
+  year={2016}
+}
+
+@misc{gonenLipstickPigDebiasing2019,
+  title = {Lipstick on a {{Pig}}: {{Debiasing Methods Cover}} up {{Systematic Gender Biases}} in {{Word Embeddings But}} Do Not {{Remove Them}}},
+  shorttitle = {Lipstick on a {{Pig}}},
+  author = {Gonen, Hila and Goldberg, Yoav},
+  year = {2019},
+  month = sep,
+  number = {arXiv:1903.03862},
+  eprint = {1903.03862},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  abstract = {Word embeddings are widely used in NLP for a vast range of tasks. It was shown that word embeddings derived from text corpora reflect gender biases in society. This phenomenon is pervasive and consistent across different word embedding models, causing serious concern. Several recent works tackle this problem, and propose methods for significantly reducing this gender bias in word embeddings, demonstrating convincing results. However, we argue that this removal is superficial. While the bias is indeed substantially reduced according to the provided bias definition, the actual effect is mostly hiding the bias, not removing it. The gender bias information is still reflected in the distances between ``gender-neutralized'' words in the debiased embeddings, and can be recovered from them. We present a series of experiments to support this claim, for two debiasing methods. We conclude that existing bias removal techniques are insufficient, and should not be trusted for providing gender-neutral modeling.},
+  archiveprefix = {arXiv},
+  langid = {english},
+  keywords = {Computer Science - Computation and Language},
+  file = {/home/jaymorgan/Zotero/storage/93FTWSED/Gonen et Goldberg - 2019 - Lipstick on a Pig Debiasing Methods Cover up Syst.pdf}
+}
+
+@article{aroraGenerativeAdversarialNetworks2022,
+  title = {Generative Adversarial Networks and Synthetic Patient Data: Current Challenges and Future Perspectives},
+  shorttitle = {Generative Adversarial Networks and Synthetic Patient Data},
+  author = {Arora, Anmol and Arora, Ananya},
+  year = {2022},
+  month = jul,
+  journal = {Future Healthc J},
+  volume = {9},
+  number = {2},
+  pages = {190--193},
+  publisher = {{Royal College of Physicians}},
+  issn = {2514-6645, 2514-6653},
+  doi = {10.7861/fhj.2022-0013},
+  abstract = {{$<$}h3{$>$}ABSTRACT{$<$}/h3{$>$} {$<$}p{$>$}Artificial intelligence (AI) has been heralded as one of the key technological innovations of the 21st century. Within healthcare, much attention has been placed upon the ability of deductive AI systems to analyse large datasets to find patterns that would be unfeasible to program. Generative AI, including generative adversarial networks, are a newer type of machine learning that functions to create fake data after learning the properties of real data. Artificially generated patient data has the potential to revolutionise clinical research and protect patient privacy. Using novel techniques, it is increasingly possible to fully anonymise datasets to the point where no datapoint is traceable to any real individual. This can be used to expand and balance datasets as well as to replace the use of real patient data in certain contexts. This paper focuses upon three key uses of synthetic data: clinical research, data privacy and medical education. We also highlight ethical and practical concerns that require consideration.{$<$}/p{$>$}},
+  chapter = {Opinion},
+  copyright = {\textcopyright{} Royal College of Physicians 2022 All rights reserved.},
+  langid = {english},
+  file = {/home/jaymorgan/Zotero/storage/XCBYDAJP/Arora et Arora - 2022 - Generative adversarial networks and synthetic pati.pdf}
+}
+
